# arch2-bot

./: .gitignore  adb_controller.py  archero2_skill_database.json  auto_triage.py  bot_loop.py  bot_memory.db  clean_repo.py  cleanup_redundant.py  combine_project.py  config.yaml  dataset_scanner.py  game_state.py  github push.bat  gui.py  hyperopt_tuner.py  main.py  overlay.py  overlay_settings.json  pyproject.toml  repo_structure_export_20260404_115053.txt  skill_advisor.py  skill_card_recognizer.py  skill_card_scanner.py  skill_recogniser.py  validate.py  verification_worker.py  vision_skill.py  yolo_archero.yml
.github/workflows/: dataset_tracker.yml
Stable/: sensenova_gui.py
core/: combat_ai.py  combat_ai_v2.py  debug_overlay.py  evasion.py  gui.py  memory_db.py  replay_buffer.py  stream_capture.py  template_skill_importer.py  vision.py  vision_angel.py  vision_devil.py  vision_dodge.py  vision_enemies.py  vision_projectiles.py  vision_sensenova.py  vision_skill_select.py  vision_template.py  vision_valkyrie.py
core/nn/: __init__.py  data_pipeline.py  inference.py  models.py
core/templates/skills/: skill_catalog.json
sensenova/: .gitignore  .pre-commit-config.yaml  README.md  README_CN.md  ai_labeler.py  auto_labeler_fixed_v3.py  example.py  example_bagel.py  pyproject.toml  run_all.bat  sensenova_bridge.py  train.py  trash_val.py
sensenova/.github/workflows/: ruff.yml
sensenova/config/: default.yaml
sensenova/docs/en/: example.md
sensenova/docs/zh/: example.md
sensenova/sensenova_si/: __init__.py  bagel.py  internvl.py  model.py  qwen.py  utils.py
sensenova/sensenova_si/bagel_utils/: inferencer.py
sensenova/sensenova_si/bagel_utils/modeling/: __init__.py  autoencoder.py
sensenova/sensenova_si/bagel_utils/modeling/bagel/: __init__.py  bagel.py  qwen2_navit.py  siglip_navit.py
sensenova/sensenova_si/bagel_utils/modeling/cache_utils/: taylorseer.py
sensenova/sensenova_si/bagel_utils/modeling/qwen2/: __init__.py  configuration_qwen2.py  modeling_qwen2.py  tokenization_qwen2.py  tokenization_qwen2_fast.py
sensenova/sensenova_si/bagel_utils/modeling/siglip/: __init__.py  configuration_siglip.py  convert_siglip_to_hf.py  image_processing_siglip.py  modeling_siglip.py  tokenization_siglip.py
unstable/: adb_controller.py  bot_loop.py
